--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
     <section id="about">
         <div class="about-wrapper">
             <div class="about-img-container" data-aos="fade-right">
-                <!-- UPDATED: Using your uploaded Profile.jpeg -->
-                <!-- If the image doesn't load, make sure the file on GitHub is named exactly "Profile.jpeg" -->
-                <img src="Profile.jpeg" alt="Shri Amit Krishna Shastri Ji" class="about-img">
+                <!-- UPDATED: Cloudinary Image Link with Alignment Fix -->
+                <img src="https://res.cloudinary.com/dc6h0eown/image/upload/v1770635258/WhatsApp_Image_2026-02-09_at_4.20.19_PM_iodq8k.jpg" 
+                     alt="Shri Amit Krishna Shastri Ji" 
+                     class="about-img" 
+                     style="object-position: top center;"> 
             </div>
             <div class="about-content" data-aos="fade-left">
                 <span class="sub-heading">About Maharaj Ji</span>
