--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section id="about">
         <div class="about-wrapper">
             <div class="about-img-container" data-aos="fade-right">
-                <!-- UPDATED: Cloudinary Image Link with Alignment Fix -->
+                <!-- Cloudinary Image Link with Alignment Fix -->
                 <img src="https://res.cloudinary.com/dc6h0eown/image/upload/v1770635258/WhatsApp_Image_2026-02-09_at_4.20.19_PM_iodq8k.jpg" 
                      alt="Shri Amit Krishna Shastri Ji" 
                      class="about-img" 
@@ -109,7 +109,7 @@
         </div>
     </section>
 
-    <!-- Services Section (Focused on Bhagwat Katha) -->
+    <!-- Services Section -->
     <section id="services" class="bg-light">
         <div class="section-header" data-aos="fade-up">
             <span class="sub-heading">Divine Offerings</span>
@@ -117,7 +117,6 @@
         </div>
         
         <div class="services-grid">
-            <!-- Highlighted Bhagwat Katha Card -->
             <div class="service-card" data-aos="fade-up" data-aos-delay="100" style="border-bottom: 4px solid var(--primary);">
                 <div class="icon-box"><i class="fas fa-book-open"></i></div>
                 <h3 class="hindi-font">श्रीमद्भागवत कथा</h3>
@@ -142,15 +141,15 @@
         </div>
     </section>
 
-    <!-- YouTube Video Section -->
+    <!-- YouTube Video Section (UPDATED) -->
     <section id="videos">
         <div class="section-header" data-aos="fade-up">
             <span class="sub-heading">Watch Online</span>
             <h2>Latest Satsang</h2>
         </div>
         <div class="video-container" data-aos="zoom-in">
-            <!-- Replace 'M7eY8h17u7g' with your actual YouTube Video ID -->
-            <iframe src="https://www.youtube.com/embed/M7eY8h17u7g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- UPDATED LINK HERE -->
+            <iframe src="https://www.youtube.com/embed/5D3vIEKXCJs?si=w7aJ31XpLg2-o5qA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div class="yt-btn-container" data-aos="fade-up">
             <a href="https://www.youtube.com" target="_blank" class="yt-btn">
@@ -159,29 +158,62 @@
         </div>
     </section>
 
-    <!-- Gallery Section (Lightbox) -->
+    <!-- Gallery Section (EXPANDED TO 8 PHOTOS) -->
     <section id="gallery" class="bg-light">
         <div class="section-header" data-aos="fade-up">
             <span class="sub-heading">Memories</span>
             <h2>Divine Glimpses</h2>
         </div>
         <div class="gallery-grid">
+            
+            <!-- PHOTO 1 -->
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
                 <img src="https://images.unsplash.com/photo-1605218427368-3619589d9e5e?q=80&w=600" alt="Katha">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
+
+            <!-- PHOTO 2 -->
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
                 <img src="https://images.unsplash.com/photo-1598448106720-31658428236d?q=80&w=600" alt="Aarti">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
+
+            <!-- PHOTO 3 -->
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
                 <img src="https://images.unsplash.com/photo-1572986423456-2e21332a7627?q=80&w=600" alt="Vrindavan">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
+
+            <!-- PHOTO 4 -->
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
                 <img src="https://images.unsplash.com/photo-1561565251-872f2e519213?q=80&w=600" alt="Bhajan">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
+
+            <!-- PHOTO 5 (New Slot - Replace src link) -->
+            <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
+                <img src="https://images.unsplash.com/photo-1517424907954-52269a924b22?q=80&w=600" alt="Devotees">
+                <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
+            </div>
+
+            <!-- PHOTO 6 (New Slot - Replace src link) -->
+            <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
+                <img src="https://images.unsplash.com/photo-1610486519198-14227c8a3248?q=80&w=600" alt="Radha Krishna">
+                <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
+            </div>
+
+            <!-- PHOTO 7 (New Slot - Replace src link) -->
+            <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
+                <img src="https://images.unsplash.com/photo-1629814486668-5231c5750036?q=80&w=600" alt="Puja">
+                <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
+            </div>
+
+            <!-- PHOTO 8 (New Slot - Replace src link) -->
+            <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
+                <img src="https://images.unsplash.com/photo-1591206369811-4eeb2f04bc95?q=80&w=600" alt="Temple">
+                <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
+            </div>
+
         </div>
     </section>
 
