--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
         <div class="video-container" data-aos="zoom-in">
             <!-- UPDATED LINK HERE -->
-            <iframe src="https://youtu.be/7F_rEllKXl0?si=vozv9eZWxQDvWpFw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/5D3vIEKXCJs?si=w7aJ31XpLg2-o5qA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div class="yt-btn-container" data-aos="fade-up">
             <a href="https://www.youtube.com" target="_blank" class="yt-btn">
