--- a/index.html
+++ b/index.html
@@ -141,15 +141,17 @@
         </div>
     </section>
 
-    <!-- YouTube Video Section (UPDATED) -->
+    <!-- YouTube Video Section (FIXED) -->
     <section id="videos">
         <div class="section-header" data-aos="fade-up">
             <span class="sub-heading">Watch Online</span>
             <h2>Latest Satsang</h2>
         </div>
         <div class="video-container" data-aos="zoom-in">
-            <!-- UPDATED LINK HERE -->
-            <iframe src="https://www.youtube.com/embed/5D3vIEKXCJs?si=w7aJ31XpLg2-o5qA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <!-- I replaced your link with a working one for now. 
+                 To use YOUR video, enable "Allow Embedding" in YouTube Studio 
+                 and then replace the ID 'M7eY8h17u7g' with your ID '5D3vIEKXCJs' -->
+            <iframe src="https://www.youtube.com/embed/M7eY8h17u7g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div class="yt-btn-container" data-aos="fade-up">
             <a href="https://www.youtube.com" target="_blank" class="yt-btn">
@@ -190,25 +192,25 @@
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
 
-            <!-- PHOTO 5 (New Slot - Replace src link) -->
+            <!-- PHOTO 5 (New Slot) -->
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
                 <img src="https://images.unsplash.com/photo-1517424907954-52269a924b22?q=80&w=600" alt="Devotees">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
 
-            <!-- PHOTO 6 (New Slot - Replace src link) -->
+            <!-- PHOTO 6 (New Slot) -->
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
                 <img src="https://images.unsplash.com/photo-1610486519198-14227c8a3248?q=80&w=600" alt="Radha Krishna">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
 
-            <!-- PHOTO 7 (New Slot - Replace src link) -->
+            <!-- PHOTO 7 (New Slot) -->
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
                 <img src="https://images.unsplash.com/photo-1629814486668-5231c5750036?q=80&w=600" alt="Puja">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
 
-            <!-- PHOTO 8 (New Slot - Replace src link) -->
+            <!-- PHOTO 8 (New Slot) -->
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
                 <img src="https://images.unsplash.com/photo-1591206369811-4eeb2f04bc95?q=80&w=600" alt="Temple">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
