--- a/index.html
+++ b/index.html
@@ -141,20 +141,29 @@
         </div>
     </section>
 
-    <!-- YouTube Video Section (FIXED) -->
+<!-- YouTube Video Section (FIXED) -->
     <section id="videos">
         <div class="section-header" data-aos="fade-up">
             <span class="sub-heading">Watch Online</span>
             <h2>Latest Satsang</h2>
         </div>
+        
+        <!-- Video Container -->
         <div class="video-container" data-aos="zoom-in">
-            <!-- I replaced your link with a working one for now. 
-                 To use YOUR video, enable "Allow Embedding" in YouTube Studio 
-                 and then replace the ID 'M7eY8h17u7g' with your ID '5D3vIEKXCJs' -->
-            <iframe src="https://www.youtube.com/embed/M7eY8h17u7g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe 
+                width="560" 
+                height="315" 
+                src="https://www.youtube.com/embed/7F_rEllKXl0?si=vozv9eZWxQDvWpFw" 
+                title="Shri Amit Krishna Shastri Ji Satsang" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen>
+            </iframe>
         </div>
+
         <div class="yt-btn-container" data-aos="fade-up">
-            <a href="https://www.youtube.com" target="_blank" class="yt-btn">
+            <a href="https://www.youtube.com/channel/UC-YOUR-CHANNEL-ID" target="_blank" class="yt-btn">
                 <i class="fab fa-youtube"></i> Visit YouTube Channel
             </a>
         </div>
