--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             
             <!-- VIDEO 1 -->
             <div class="video-card" data-aos="zoom-in" data-aos-delay="100">
-                <iframe src="https://www.youtube.com/embed/7F_rEIlKXI0?rel=0" 
+                <iframe src="https://www.youtube.com/embed/7F_rEllKXl0?si=tN3dynRF76WLFyK" 
                         title="Satsang Video 1" 
                         allowfullscreen>
                 </iframe>
@@ -161,7 +161,7 @@
 
             <!-- VIDEO 2 (Change the ID '7F_rEIlKXI0' to another video ID) -->
             <div class="video-card" data-aos="zoom-in" data-aos-delay="200">
-                <iframe src="https://www.youtube.com/embed/7F_rEIlKXI0?rel=0" 
+                <iframe src="https://www.youtube.com/embed/FAC1UdGf_4M?si=fYowBGUOnpxR_uTz" 
                         title="Satsang Video 2" 
                         allowfullscreen>
                 </iframe>
@@ -169,7 +169,7 @@
 
             <!-- VIDEO 3 (Change the ID '7F_rEIlKXI0' to another video ID) -->
             <div class="video-card" data-aos="zoom-in" data-aos-delay="300">
-                <iframe src="https://www.youtube.com/embed/7F_rEIlKXI0?rel=0" 
+                <iframe src="https://www.youtube.com/embed/jLDXej01b7M?si=p7YPynHUTatdHSqr" 
                         title="Satsang Video 3" 
                         allowfullscreen>
                 </iframe>
@@ -394,3 +394,4 @@
     </script>
 </body>
 </html>
+
