--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
         <!-- 3 Videos in a Horizontal Row -->
         <div class="video-grid">
             <div class="video-card" data-aos="zoom-in" data-aos-delay="100">
-                <iframe src="https://www.youtube.com/embed/7F_rEIlKXI0?rel=0" title="Satsang 1" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/L3xyTHrrfjw?si=nYUuJvgySoI5GlFT" title="Satsang 1" allowfullscreen></iframe>
             </div>
             <div class="video-card" data-aos="zoom-in" data-aos-delay="200">
-                <iframe src="https://www.youtube.com/embed/7F_rEIlKXI0?rel=0" title="Satsang 2" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/8p9CAtRzwJk?si=mTkwdq1Lq-Jk2Atb" title="Satsang 2" allowfullscreen></iframe>
             </div>
             <div class="video-card" data-aos="zoom-in" data-aos-delay="300">
-                <iframe src="https://www.youtube.com/embed/7F_rEIlKXI0?rel=0" title="Satsang 3" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/R5eXSYfPeeM?si=Y-0lkKG-sxnFHtrG" title="Satsang 3" allowfullscreen></iframe>
             </div>
         </div>
         <div class="yt-btn-container" data-aos="fade-up">
