--- a/index.html
+++ b/index.html
@@ -130,35 +130,35 @@
         </div>
         <div class="gallery-grid">
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
-                <img src="https://images.unsplash.com/photo-1605218427368-3619589d9e5e?q=80&w=600" alt="Katha">
+                <img src="https://res.cloudinary.com/dc6h0eown/image/upload/v1770789970/WhatsApp_Image_2026-02-09_at_4.21.17_PM_4_ernemv.jpg" alt="Katha">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
-                <img src="https://images.unsplash.com/photo-1598448106720-31658428236d?q=80&w=600" alt="Aarti">
+                <img src="https://res.cloudinary.com/dc6h0eown/image/upload/v1770789971/WhatsApp_Image_2026-02-09_at_4.21.17_PM_1_jkahcg.jpg" alt="Aarti">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
-                <img src="https://images.unsplash.com/photo-1572986423456-2e21332a7627?q=80&w=600" alt="Vrindavan">
+                <img src="https://res.cloudinary.com/dc6h0eown/image/upload/v1770789971/WhatsApp_Image_2026-02-09_at_4.21.17_PM_2_nfqpth.jpg" alt="Vrindavan">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
-                <img src="https://images.unsplash.com/photo-1561565251-872f2e519213?q=80&w=600" alt="Bhajan">
+                <img src="https://res.cloudinary.com/dc6h0eown/image/upload/v1770789971/WhatsApp_Image_2026-02-09_at_4.21.17_PM_krvap5.jpg" alt="Bhajan">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
-                <img src="https://images.unsplash.com/photo-1517424907954-52269a924b22?q=80&w=600" alt="Devotees">
+                <img src="https://res.cloudinary.com/dc6h0eown/image/upload/v1770789970/WhatsApp_Image_2026-02-09_at_4.20.16_PM_kutr7m.jpg" alt="Devotees">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
-                <img src="https://images.unsplash.com/photo-1610486519198-14227c8a3248?q=80&w=600" alt="Radha Krishna">
+                <img src="https://res.cloudinary.com/dc6h0eown/image/upload/v1770789970/WhatsApp_Image_2026-02-09_at_4.20.16_PM_1_wvuyk1.jpg" alt="Radha Krishna">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
-                <img src="https://images.unsplash.com/photo-1629814486668-5231c5750036?q=80&w=600" alt="Puja">
+                <img src="https://res.cloudinary.com/dc6h0eown/image/upload/v1770789970/WhatsApp_Image_2026-02-09_at_4.21.17_PM_3_sevzyw.jpg" alt="Puja">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" onclick="openLightbox(this)">
-                <img src="https://images.unsplash.com/photo-1591206369811-4eeb2f04bc95?q=80&w=600" alt="Temple">
+                <img src="https://res.cloudinary.com/dc6h0eown/image/upload/v1770789970/WhatsApp_Image_2026-02-09_at_4.20.16_PM_2_hoz93r.jpg" alt="Temple">
                 <div class="gallery-overlay"><i class="fas fa-expand-alt"></i></div>
             </div>
         </div>
