--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <div class="video-container" data-aos="fade-up" data-aos-delay="200"><iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe></div>
         </div>
         <div style="text-align: center; margin-top: 30px;">
-            <a href="https://youtube.com" target="_blank" class="btn-gold" style="background: #FF0000; box-shadow: none;"><i class="fab fa-youtube"></i> View All Videos</a>
+            <a href="https://www.youtube.com/@ShriAmitKrishnaShastriJii/featured" target="_blank" class="btn-gold" style="background: #FF0000; box-shadow: none;"><i class="fab fa-youtube"></i> View All Videos</a>
         </div>
     </section>
 
@@ -425,5 +425,6 @@
     </script>
 </body>
 </html>
+
 
 
