--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
             <h2 class="hindi-font">लेटेस्ट सत्संग</h2>
         </div>
         <div class="video-grid">
-            <div class="video-container" data-aos="fade-up"><iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe></div>
-            <div class="video-container" data-aos="fade-up" data-aos-delay="100"><iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe></div>
-            <div class="video-container" data-aos="fade-up" data-aos-delay="200"><iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe></div>
+            <div class="video-container" data-aos="fade-up"><iframe src="https://www.youtube.com/embed/uZ4A86bAioQ?si=QdzAQW33vJLRd-_6"></iframe></div>
+            <div class="video-container" data-aos="fade-up" data-aos-delay="100"><iframe src="https://www.youtube.com/embed/797bAsSFRtw?si=YnL0kylyXLDjZGCP"></iframe></div>
+            <div class="video-container" data-aos="fade-up" data-aos-delay="200"><iframe src="https://www.youtube.com/embed/vkIPTuzzQXw?si=5LivD7Z92SsSx_2b"></iframe></div>
         </div>
         <div style="text-align: center; margin-top: 30px;">
             <a href="https://www.youtube.com/@ShriAmitKrishnaShastriJii/featured" target="_blank" class="btn-gold" style="background: #FF0000; box-shadow: none;"><i class="fab fa-youtube"></i> View All Videos</a>
@@ -425,6 +425,7 @@
     </script>
 </body>
 </html>
+
 
 
 
